--- a/web-design/css/layout/row.css
+++ b/web-design/css/layout/row.css
@@ -1,16 +1,12 @@
 @charset "UTF-8";
 
-
 /**********************************************************************
- display
+ layout-row
 **********************************************************************/
-.display-flex {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -webkit-flexbox;
-    display: -ms-flexbox;
+.layout-row {
     display: -webkit-flex;
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
 }
-
-
