--- a/web-design/css/component/breadcrumb.css
+++ b/web-design/css/component/breadcrumb.css
@@ -4,17 +4,17 @@
 
 
 /**********************************************************************
- Breadcrumb box.
+ Breadcrumb.
 
  [HTML]
- <nav class="breadcrumb-box">
+ <nav class="breadcrumb">
    <ul class="list">
      <li class="item"><a class="link" href="" title="">Level-1<a></li>
      <li class="item">Level-2</li>
    </<ul>
  </nav>
 **********************************************************************/
-.breadcrumb-box {
+.breadcrumb {
     -webkit-align-items: center;
     align-items: center;
     display: -webkit-flex;
@@ -24,7 +24,7 @@
     position: relative;
     width: 100%;
 }
-.breadcrumb-box > .list {
+.breadcrumb > .list {
     -webkit-align-items: center;
     align-items: center;
     display: -webkit-flex;
@@ -36,7 +36,7 @@
     position: relative;
     width: 100%;
 }
-.breadcrumb-box > .list > .item {
+.breadcrumb > .list > .item {
     -webkit-align-items: center;
     align-items: center;
     display: -webkit-flex;
@@ -44,12 +44,12 @@
     font-size: 0.75em;
     margin: 3px;
 }
-.breadcrumb-box > .list > .item:nth-child(n + 2)::before {
+.breadcrumb > .list > .item:nth-child(n + 2)::before {
     content: '>';
     display: block;
     margin: 0 7px;
 }
-.breadcrumb-box > .list > .item > .link {
+.breadcrumb > .list > .item > .link {
     color: var(--nkw-color-link);
     display: block;
     font-weight: bold;
