--- a/web-design/css/component/style.css
+++ b/web-design/css/component/style.css
@@ -1,8 +1,15 @@
 @charset "UTF-8";
 
 @import './accordion.css';
+@import './badge.css';
 @import './breadcrumb.css';
+@import './card-list.css';
 @import './console.css';
 @import './directory.css';
+@import './form.css';
+@import './horizontal-list.css';
+@import './image-box.css';
+@import './image-list.css';
 @import './profile-card.css';
 @import './table.css';
+@import './text-with-icon.css';
